# Chiron

./: .gitignore  LICENSE  README.md
PRDs/: PRD-001-open-domain-medical-evidence-assistant.md  PRD-002-safety-abstention-and-evaluation.md  PRD-003-mvp-demo-and-delivery.md  PRD.md  README.md  SAFETY_EVAL.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  specialists.py
backend/app/api/: __init__.py  deps.py  routes.py
backend/app/connectors/: __init__.py  base.py  clinicaltrials.py  dailymed.py  guidelines.py  mock.py  pubmed.py
backend/app/connectors/fixtures/: guidelines.json
backend/app/core/: __init__.py  config.py  db.py
backend/app/evaluation/: __init__.py  runner.py
backend/app/orchestration/: __init__.py  graph.py  nodes.py  state.py
backend/app/persistence/: models.py
backend/app/schemas/: __init__.py  common.py  session.py
backend/app/services/: __init__.py  chat_service.py  llm_service.py  progress_service.py  session_service.py
backend/tests/: test_api.py  test_clinicaltrials_connector.py  test_dailymed_connector.py  test_ecri_connector.py  test_evaluation_runner.py  test_evidence_ordering.py  test_guideline_fixture_connector.py  test_pubmed_connector.py
docs/: ARCHITECTURE.md  DECISIONS_REVIEW.md  FRONTEND_AGENT_BRIEF.md  IMPLEMENTATION_DECISIONS_QA.md  IMPLEMENTATION_PLAN.md  SEMANTIC_LAYER.md
eval/: benchmark.json
frontend/: .env.example  .gitignore  FRONTEND_AGENT_BRIEF.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+37 files in other folders)
