[project]
name = "chiron-backend"
version = "0.1.0"
description = "Backend scaffold for Chiron medical evidence assistant"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "alembic>=1.13.2",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "google-genai>=1.15.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.35",
  "pypdf>=5.5.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
